--- a/components/basket/basket.module.css
+++ b/components/basket/basket.module.css
@@ -8,6 +8,7 @@
   height: 3rem;
   padding: 0;
   border: 0;
+  transition: background 0.6s ease-in-out;
 }
 
 .basket__count {
@@ -21,6 +22,33 @@
 	background-color: transparent;
 
 	font-weight: 500;
-	font-size: 28px;
-  color: var(--accent);
+	font-size: 1.75rem;
+  color: var(--white);
+}
+
+.basket__button img {
+  background: transparent;
+
+  transition: background 0.6s ease-in-out;
+}
+
+.basket__button:hover img {
+  background: url('/images/header/basket_icon_40.png') center/ contain no-repeat;
+}
+
+@media (max-width: 62.5rem) {
+  .basket__button {
+    width: 2.5rem;
+    height: 2.5rem;
+  }
+}
+
+@media (max-width: 46.5rem) {
+  .basket__button {
+    width: 2rem;
+    height: 2rem;
+  }
+  .basket__count {
+    font-size: 1rem;
+  }
 }
