--- a/components/header/header.module.css
+++ b/components/header/header.module.css
@@ -21,7 +21,7 @@
   gap: 2.8125rem;
 }
 
-@media (max-width: 1440px) {
+@media (max-width: 90rem) {
   .header {
     font-size: 1.5rem;
   }
@@ -30,14 +30,9 @@
   }
 }
 
-@media (max-width: 744px) {
+@media (max-width: 46.5rem) {
   .header {
-    font-size: 1.5rem;
-  }
-}
-
-@media (max-width: 360px) {
-  .header {
+    padding: 0.5rem 0;
     font-size: 1.5rem;
   }
 }
