--- a/components/logo/logo.module.css
+++ b/components/logo/logo.module.css
@@ -8,12 +8,12 @@
 
 @media (max-width: 46.5rem) {
   .logo {
-    width: 4.75rem;
-    height: 4.1875rem;
+    width: 40px;
+    height: 35px;
   }
 
   .logo img {
-    width: 4.75rem;
-    height: 4.1875rem;
+    width: 40px;
+    height: 35px;
   }
 }
