--- a/components/menu-button/menu-button.module.css
+++ b/components/menu-button/menu-button.module.css
@@ -6,3 +6,29 @@
   border: none;
   z-index: 101;
 }
+
+.button img {  
+  border-radius: 1.25rem;
+  background-color: transparent;
+
+  transition: all .4s ease-in-out;
+}
+
+.button:hover img {
+  border-radius: 1.25rem;
+  background-color: var(--footer-color);
+}
+
+@media (max-width: 62.5rem) {
+  .button {
+    width: 2.5rem;
+    height: 2.5rem;
+  }
+}
+
+@media (max-width: 46.5rem) {
+  .button {
+    width: 2rem;
+    height: 2rem;
+  }
+}
