--- a/components/menu/menu.module.css
+++ b/components/menu/menu.module.css
@@ -6,13 +6,38 @@
   gap: 1.5rem;
 }
 
+.menu__list_sub {
+  display: none;
+  position: absolute;
+  left: -3%;
+  flex-direction: column;
+  row-gap: 1.25rem;
+  z-index: 10;
+  padding-top: 2rem;
+}
+
+.menu__item.menu__item_drop:hover .menu__list_sub {
+  display: flex;
+}
+
 .menu__item {
-  padding: 0.5rem 10px;
+  position: relative;
+  padding: 0.5rem 1rem;
   font-weight: 500;
-  font-size: 24px;
+  font-size: 1.5rem;
   color: var(--white);
+  text-transform: capitalize;
   border: 0.125rem solid transparent;
   transition: all 0.6s ease-in-out;
+}
+
+.menu__item a {
+  padding: 0.5rem 1rem;
+  transition: all 0.6s ease-in-out;
+}
+
+.menu__item_sub {
+  font-size: 1.125rem;
 }
 
 .active {
@@ -21,7 +46,7 @@
   border: 0.125rem solid var(--white);
 }
 
-.menu__item:hover {
+.menu__item a:hover {
   background-color: var(--footer-color);
   border-radius: 3.125rem;
   border: 0.125rem solid var(--white);
@@ -35,29 +60,31 @@
   .menu_btn {
     display: block;
   }
-
   .menu {
     position: fixed;
     inset: 0;
     left: -120%;
     width: 100%;
     height: 100%;
-    padding: 63px;
+    padding: 6.25rem;
     background-color: var(--accent);
     transition: transform 0.3s linear;
     z-index: 100;
   }
-
   .menu.active {
     transform: translateX(120%);
   }
-
   .menu__list {
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
     row-gap: 1rem;
-  }  
+  }
+  .menu__list_sub {
+    display: flex;
+    position: relative;
+    padding-top: 1rem;
+  }
 }
 
 @media (max-width: 46.5rem) {
@@ -70,5 +97,8 @@
   .active {
     border-radius: 0rem;
     border: 0.125rem solid transparent;
+  }
+  .menu__item_sub {
+    font-size: 1rem;
   }
 }
