--- a/components/products-card/products-card.module.css
+++ b/components/products-card/products-card.module.css
@@ -1,40 +1,51 @@
 .cards {
   position: relative;
-  z-index: 10;
-  padding: 5rem 0 13.25rem;
+  z-index: 1;
+  padding: 5rem 0 0rem;
 }
 
 .cards__list {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 6.5625rem;
+}
+
+/* .cards__list {
+  min-height: 100rem;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-areas: 
+  grid-template-areas:
     'img1 img2 img3' 
     'img1 img2 img3' 
     'img1 img2 img3' 
-    'img1 img2 img3' 
-    'img1 img2 img3' 
-    'img1 img2 img3' 
-    'img1 img2 img3' 
-    'img1 img2 img3' 
-    'img1 img2 img3' 
-    '. img2 img3' 
-    '. img2 img3' 
-    'img4 img2 img3' 
-    'img4 . img3' 
-    'img4 img5 img3' 
-    'img4 img5 img3' 
-    'img4 img5 img3' 
+    'img1 img2 img3'
+    'img1 img2 img3'
+    'img1 img2 img3'
+    'img1 img2 img3'
+    'img1 img2 img3'
+    'img1 img2 img3'
+    '. . img3' 
+    '. . img3'
+    'img4 img5 img3'
+    'img4 img5 img3'
     'img4 img5 .' 
     'img4 img5 .' 
     'img4 img5 img7' 
     'img4 img5 img7'
-    'img4 . img7' 
-    'img4 img6 img7' 
-    'img4 img6 img7' 
-    'img4 img6 img7' 
-    'img4 img6 img7' 
-    '. img6 img7' 
-    '. img6 img7';
+    'img4 img5  img7'
+    'img4 img5  img7'
+    'img4 img5  img7'
+    'img4 . img7'
+    'img4 . img7'
+    'img4 img6 img7'
+    'img4 img6 img7'
+    '. img6 .' 
+    '. img6 .'
+    '. img6 .'
+    '. img6 .'
+    '. img6 .'
+    '. img6 .'
+    '. img6 .';
   column-gap: 6.375rem;
 }
 
@@ -65,11 +76,42 @@
 
 .cards__list [data-index='6'] {
   grid-area: img7;
-}
+} */
 
 .cards__item {
+  width: 28.875rem;
+  height: 28.875rem;
   position: relative;
+  border-radius: 6.25rem;
   cursor: pointer;
+}
+
+.cards__list [data-index='2'] {
+  width: 28.875rem;
+  height: 39rem;
+}
+
+.cards__list [data-index='3'] {
+  width: 28.875rem;
+  height: 39rem;
+  top: -9.375rem;
+}
+
+.cards__list [data-index='4'] {
+  top: -9.375rem;
+}
+
+.cards__list [data-index='5'] {
+  top: 1.25rem;
+}
+
+.cards__list [data-index='6'] {
+  top: -17.5rem;
+}
+
+.cards__item img {
+  object-fit: cover;
+  border-radius: 6.25rem;
 }
 
 .cards__item:hover .cards__name {
@@ -97,8 +139,276 @@
   text-align: center;
 }
 
-@media (max-width: 90rem) {
+@media (min-width: 78.125rem) and (max-width: 119.9994rem) {
+  .cards__list {
+    gap: 5.3125rem;
+  }
+  .cards__item {
+    width: 342px;
+    height: 342px;
+  }
+  .cards__list [data-index='3'] {
+    width: 342px;
+    height: 536px;
+    top: -180px;
+  }  
+  .cards__list [data-index='2'] {
+    width: 342px;
+    height: 536px;
+  }
+  .cards__list [data-index='4'] {
+    top: -180px;
+  }
+  .cards__list [data-index='6'] {
+    top: -350px;
+  }
   .cards__name {
-    padding: 2.9688rem 4.1875rem 3.0313rem 4.1875rem;
-  } 
+    padding: 9.375rem 5.4375rem;
+  }
+}
+
+@media (min-width: 64.0625rem) and (max-width: 1249.99px) {
+  .cards__list {
+    gap: 4.375rem;
+  }
+  .cards__item {
+    width: 250px;
+    height: 250px;
+    border-radius: 2.8125rem;
+  }
+  .cards__list [data-index='3'] {
+    width: 250px;
+    height: 22.5rem;
+    top: -6.25rem;
+  }  
+  .cards__list [data-index='2'] {
+    width: 250px;
+    height: 22.5rem;
+  }
+  .cards__list [data-index='4'] {
+    top: -6.25rem;
+  }
+  .cards__list [data-index='6'] {
+    top: -12rem;
+  }
+  .cards__item img {
+    object-fit: cover;
+    border-radius: 2.8125rem;
+  }
+  .cards__name {
+    padding: 1.625rem 0.875rem;
+    font-size: 3rem;
+    border-radius: 2.8125rem;
+  }
+}
+
+@media (min-width: 55.5rem) and (max-width: 64.0619rem) {
+  .cards__list {
+    gap: 3.75rem;
+  }
+  .cards__item {
+    width: 12.5rem;
+    height: 12.5rem;
+    border-radius: 2.8125rem;
+  }
+  .cards__list [data-index='3'] {
+    width: 12.5rem;
+    height: 18.75rem;
+    top: -6.25rem;
+  }  
+  .cards__list [data-index='2'] {
+    width: 12.5rem;
+    height: 18.75rem;
+  }
+  .cards__list [data-index='4'] {
+    top: -6.25rem;
+  }
+  .cards__list [data-index='6'] {
+    top: -12rem;
+  }
+  .cards__item img {
+    object-fit: cover;
+    border-radius: 2.8125rem;
+  }
+  .cards__name {
+    padding: 1.625rem 0.875rem;
+    font-size: 3rem;
+    border-radius: 2.8125rem;
+  }
+}
+
+@media (min-width: 46.5rem) and (max-width: 55.4994rem) {
+  .cards__list {
+    gap: 2.75rem;
+  }
+  .cards__item {
+    width: 11.0625rem;
+    height: 11.0625rem;
+    border-radius: 2.8125rem;
+  }
+  .cards__list [data-index='3'] {
+    width: 11.0625rem;
+    height: 16.625rem;
+    top: -5rem;
+  }  
+  .cards__list [data-index='2'] {
+    width: 11.0625rem;
+    height: 16.625rem;
+  }
+  .cards__list [data-index='4'] {
+    top: -5rem;
+  }
+  .cards__list [data-index='6'] {
+    top: -9.375rem;
+  }
+  .cards__item img {
+    object-fit: cover;
+    border-radius: 2.8125rem;
+  }
+  .cards__name {
+    padding: 1.625rem 0.875rem;
+    font-size: 2.25rem;
+    border-radius: 2.8125rem;
+  }
+}
+
+@media (min-width: 40.3125rem) and (max-width: 46.4994rem) {
+  .cards {
+    padding: 2rem 0;
+  }
+  .cards__list {
+    align-items: center;
+    gap: 32px;
+  }
+  .cards__item {
+    width: 177px;
+    height: 177px;
+    border-radius: 45px;
+  }
+  .cards__list [data-index='3'] {
+    width: 177px;
+    height: 266px;
+    top: 0;
+  }  
+  .cards__list [data-index='2'] {
+    width: 177px;
+    height: 266px;
+  }
+  .cards__list [data-index='4'] {
+    top: 0px;
+    /* display: none; */
+  }
+  .cards__list [data-index='5'] {
+    display: none;
+  }
+  .cards__list [data-index='6'] {
+    top: 0px;
+  }
+  .cards__item img {
+    object-fit: cover;
+    border-radius: 2.8125rem;
+  }
+  .cards__name {
+    padding: 1.625rem 0.875rem;
+    font-size: 2.25rem;
+    border-radius: 2.8125rem;
+  }
+}
+
+@media (min-width: 27.1875rem) and (max-width: 40.3119rem) {
+  .cards {
+    padding: 2rem 0;
+  }
+  .cards__list {
+    align-items: center;
+    gap: 2rem;
+  }
+  .cards__item {
+    width: 11.0625rem;
+    height: 11.0625rem;
+    border-radius: 2.8125rem;
+  }
+  .cards__list [data-index='3'] {
+    width: 11.0625rem;
+    height: 16.625rem;
+    top: 0;
+  }  
+  .cards__list [data-index='2'] {
+    display: none;
+  }
+  .cards__list [data-index='4'] {
+    top: 0rem;
+    display: none;
+  }
+  .cards__list [data-index='5'] {
+    display: none;
+  }
+  .cards__list [data-index='6'] {
+    top: 0rem;
+  }
+  .cards__item img {
+    object-fit: cover;
+    border-radius: 2.8125rem;
+  }
+  .cards__name {
+    padding: 1.625rem 1.375rem;
+    font-size: 2.25rem;
+    border-radius: 2.8125rem;
+  }
+}
+
+@media (min-width: 20rem) and (max-width: 27.1869rem) {
+  .cards {
+    min-height: 31.9rem;
+    padding: 2rem 0;
+  }
+  .cards__list {
+    height: 31.9rem;
+    align-items: center;
+    gap: 2rem;
+    position: relative;
+  }
+  .cards__item {
+    position: absolute;
+    width: 11.0625rem;
+    height: 11.0625rem;
+    border-radius: 2.8125rem;
+  }
+  .cards__list [data-index='0'] {
+    top: 0;
+    left: 0;
+  }
+  .cards__list [data-index='1'] {
+    top: 0;
+    right: -20%;
+  }
+  .cards__list [data-index='3'] {
+    width: 11.0625rem;
+    height: 16.625rem;
+    top: 45%;
+    left: 10%;
+  }  
+  .cards__list [data-index='2'] {
+    display: none;
+  }
+  .cards__list [data-index='4'] {
+    top: 0rem;
+    display: none;
+  }
+  .cards__list [data-index='5'] {
+    display: none;
+  }
+  .cards__list [data-index='6'] {
+    top: 50%;
+    right: -35%;
+  }
+  .cards__item img {
+    object-fit: cover;
+    border-radius: 2.8125rem;
+  }
+  .cards__name {
+    padding: 1.625rem 1.375rem;
+    font-size: 2.25rem;
+    border-radius: 2.8125rem;
+  }
 }
