--- a/components/profile/profile.module.css
+++ b/components/profile/profile.module.css
@@ -8,3 +8,27 @@
   padding: 0;
   border: 0;
 }
+
+.profile__button img {
+  background: transparent;
+
+  transition: background 0.6s ease-in-out;
+}
+
+.profile__button:hover img {
+  background: url('/images/header/profile_icon_40.png') center/ contain no-repeat;
+}
+
+@media (max-width: 62.5rem) {
+  .profile__button{
+    width: 2.5rem;
+    height: 2.5rem;
+  }
+}
+
+@media (max-width: 46.5rem) {
+  .profile__button{
+    width: 2rem;
+    height: 2rem;
+  }
+}
