--- a/components/section-header/section-header.module.css
+++ b/components/section-header/section-header.module.css
@@ -1,13 +1,15 @@
 .title {
-  position: relative;
-  margin: 0;
   display: flex;
   flex-direction: row;
   align-items: center;
+  margin: 0;
+
   font-size: 7.5rem;
   font-weight: 500;
   text-transform: uppercase;
+
   background-color: var(--accent);
+
   z-index: 2;
 }
 
@@ -25,7 +27,7 @@
   margin-left: 19.4rem;
 }
 
-@media (min-width: 75rem) and (max-width: 106.25rem) {
+@media (min-width: 90rem) and (max-width: 119.9994rem) {
   .title {
     font-size: 6.5rem;
   }
@@ -40,7 +42,7 @@
   }
 }
 
-@media (min-width: 46.5rem) and (max-width: 75rem) {
+@media (min-width: 46.5rem) and (max-width: 1439.99px) {
   .title {
     font-size: 4rem;
   }
@@ -55,7 +57,7 @@
   }
 }
 
-@media (min-width: 20rem) and (max-width: 46.5rem) {
+@media (min-width: 20rem) and (max-width: 743.99px) {
   .title {
     font-size: 2.5rem;
     flex-wrap: wrap;
