--- a/components/count/count.module.css
+++ b/components/count/count.module.css
@@ -1,6 +1,6 @@
 .count {
-  width: 102px;
-  height: 30px;
+  width: 6.375rem;
+  height: 1.875rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -8,8 +8,8 @@
 
 .minus,
 .plus {
-  width: 30px;
-  height: 30px;
+  width: 1.875rem;
+  height: 1.875rem;
   background-color: var(--accent);
   border-radius: 50%;
   display: flex; 
@@ -28,6 +28,19 @@
   font-size: 1rem;
 }
 
-@media (min-width: 1024px) {
-  
+@media (max-width: 46.5rem) {
+  .count {
+    width: 5rem;
+    height: 1.25rem;
+  }
+  .minus,
+  .plus {
+    width: 1.25rem;
+    height: 1.25rem;
+  }
+  .minus svg,
+  .plus svg {
+    width: 1rem;
+    height: 1rem;
+  }
 }
