--- a/components/search/search.module.css
+++ b/components/search/search.module.css
@@ -10,46 +10,58 @@
 }
 
 .search__label {
-  width: 786px;
-  padding: 8px;
+  width: 49.125rem;
+  padding: 0.5rem;
   position: relative;
-  border-radius: 50px;
-  border: 1px solid var(--black);
+  border-radius: 3.125rem;
+  border: 0.0625rem solid var(--black);
   background-color: var(--white);
 }
 
 .search__label svg {
-  width: 24px;
-  height: 24px;
+  width: 1.5rem;
+  height: 1.5rem;
   position: absolute;
-  left: 24px;
+  left: 1.5rem;
   top: 50%;
   transform: translateY(-50%);
+}
+
+.search__label svg.search__close {
+  left: auto;
+  right: 1.25rem;
+  opacity: 0;
+  border-radius: 50%;
+  transition: background-color .4s ease-in-out;
+}
+
+.search__label svg.search__close:hover {
+  background-color: var(--footer-color);
 }
 
 .search__input {
   position: relative;
   width: 100%;
-  padding: 10px 10px 10px 74px;
+  padding: 0.625rem 0.625rem 0.625rem 4.625rem;
   border: none;
 
-  font-size: 20px;
+  font-size: 1.25rem;
   color: var(--black);
 }
 
 .search__input::placeholder {
   font-weight: 500;
-  font-size: 18px;
+  font-size: 1.125rem;
   color: var(--grey);
 }
 
 .search__btn {
-  padding: 16px 32px;
+  padding: 1rem 2rem;
   background-color: var(--accent);
-  border-radius: 50px;
+  border-radius: 3.125rem;
   border: none;
   
-  font-size: 24px;
+  font-size: 1.5rem;
   font-weight: 600;
   color: var(--white);
   text-transform: uppercase;
@@ -58,4 +70,66 @@
 
 .search__btn:hover {
   background-color: var(--accent-second);
+}
+
+/* @media (min-width: 90rem) and (max-width: 119.9994rem) {
+  .search__btn {
+    padding: 0.5rem 1.5rem;  
+    font-size: 1rem;
+  }
+} */
+
+@media (min-width: 46.5rem) and (max-width: 89.9994rem) {
+  .search__input {
+    padding: 0rem 0.25rem 0rem 3.375rem;  
+    font-size: 1rem;
+  }
+  .search__input::placeholder {
+    font-size: 1rem;
+  }
+  .search__label {
+    display: flex;
+    align-items: center;
+    padding: 0.5rem;
+  }
+  .search__btn {
+    padding: 0.5rem 1.5rem;  
+    font-size: 1rem;
+  }
+}
+
+@media (min-width: 20rem) and (max-width: 46.4994rem) {
+  .search__form {
+    gap: 1rem;
+  }
+  .search__input {
+    padding: 0px 4px 0px 44px;  
+    font-size: 1rem;
+  }
+  .search__input::placeholder {
+    font-size: 1rem;
+  }
+  .search__label {
+    display: flex;
+    min-width: 244px;
+    align-items: center;
+    padding: 0.6rem;
+  }
+  .search__label svg {
+    left: 0.875rem;
+  }
+  .search__btn {
+    padding: 0.25rem 0.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 3.125rem;
+  }
+  .search__btn svg {
+    min-width: 1.5rem;
+    min-height: 1.5rem;
+  }
+  .search__label svg.search__close {
+    right: 0.5rem;
+  }
 }
