added profile and single product pages

--- a/components/hero/hero.module.css
+++ b/components/hero/hero.module.css
@@ -81,6 +81,9 @@
     max-width: 703px;
     min-height: 673px;
   }
+  .hero:after {
+    background-position-y: bottom;
+  }
 }
 
 @media (min-width: 46.5rem) and (max-width: 89.9994rem) {
