--- a/app/auth/auth.module.css
+++ b/app/auth/auth.module.css
@@ -1,17 +1,18 @@
 .auth {
-  margin: 6.25rem 0;
+  padding: 3rem 0;
   font-size: 1.25rem;
 }
 
 .auth__wrapper {
   width: 100%;
-  display: flex;
+  /* display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: center; */
 }
 
 .auth__form {
-  display: inline-block;
+  /* display: inline-block; */
+  margin: 0 auto;
   max-width: 28.125rem;
   padding: 1.875rem;
   border: 0.125rem solid var(--white);
@@ -21,16 +22,31 @@
   vertical-align: middle;
 }
 
-.auth__title {  
-  font-size: 1.5rem;
+.auth__title {
+  font-weight: 500;
+  font-size: 2.5rem;
   text-transform: uppercase;
-  margin-bottom: 1.5625rem;
+  text-align: center;
+  margin-bottom: 3rem;
 }
 
 .form__label {
   display: block;
-  margin-bottom: 2.125rem;
+  margin-bottom: 2rem;
   position: relative;
+  text-align: left;
+}
+
+.label__text {
+  display: inline-block;
+  min-height: 1.375rem;
+  font-weight: 400;
+  font-size: 0.75rem;
+  color: var(--grey);
+  text-transform: capitalize;
+  margin-bottom: 0.375rem;
+  opacity: 0;
+  transition: opacity .5s linear;
 }
 
 .form__label__text {
@@ -42,11 +58,11 @@
 
 .form__label__input {
   width: 100%;
-  height: 3.75rem;
-  padding: 0.3125rem 0.625rem;
-  font-size: 1.375rem;
-  border: 0.125rem solid var(--accent-second);
-  border-radius: 0.25rem;
+  height: 40px;
+  padding: 0.25rem 0.5rem;
+  font-size: 1rem;
+  border: 0.0625rem solid var(--grey);
+  border-radius: 0.5rem;
   background-color: transparent;
 }
 
@@ -54,16 +70,21 @@
   border-color: var(--red);
 }
 
+.form__label__input:active .label__text {
+  opacity: 1;
+}
+
 .form__label__input::placeholder {
-  font-size: 1.375rem;
+  font-weight: 400;
+  font-size: 1rem;
 }
 
 .form__label__btn {
-  height: 100%;
   position: absolute;
-  top: 0;
+  top: 50%;
   right: 0;
-  padding: 0 7px;
+  transform: translateY(20%);
+  padding: 0 0.4375rem;
   border: none;
 }
 
@@ -85,6 +106,7 @@
 }
 
 .form__google {
+  display: block;
   margin-bottom: 20px;
 }
 
@@ -97,12 +119,25 @@
   content: '';
   width: 100%;
   height: 2px;
-  background-color: var(--accent);
+  background-color: var(--white);
 }
 
-.form__submit,
-.form__reg {
-  margin-bottom: 15px;
+.form__submit {  
+  padding: 1rem 2rem;
+  border-radius: 3.125rem;
+  background-color: var(--accent);
+  color: var(--black);
+  font-size: 1.5rem;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+
+.form__submit:disabled {
+  background-color: var(--disabled);
+}
+
+.form__submit:hover {
+  background-color: var(--footer-color);
 }
 
 .form__reg a {
@@ -116,14 +151,44 @@
 
 .form__label__error {
   display: inline-block;
-  margin: 7px 0;
+  margin: 0.4375rem 0;
   color: red;
-  font-size: 12px;
+  font-size: 0.75rem;
 }
 
 .form__memory__input {
   margin-right: 0.75rem;
   margin-bottom: 1.25rem;
+}
+
+.form__links {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 2rem;
+}
+
+.form__link {
+  font-weight: 400;
+  font-size: 0.875rem;
+  transition: text-decoration .4s ease-in-out;
+}
+
+.form__link:hover {
+  text-decoration: underline;
+}
+
+.form__reset {
+  margin: 1rem auto 0rem;
+  display: block;
+  font-size: 0.875rem;
+  font-weight: 400;
+  color: var(--black);
+  transition: text-decoration .4s linear;
+}
+
+.form__reset:hover {  
+  text-decoration: underline;
 }
 
 .animate_password {
