--- a/app/styles/not-found.module.css
+++ b/app/styles/not-found.module.css
@@ -1,42 +1,42 @@
 .notFound {
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 80px 0 16rem;
+  padding: 7.5rem 0 8.75rem;
   font-weight: 600;
-  color: var(--accent);
-  background-color: var(--white);
-}
-
-.notFound__title { 
-  margin-bottom: 2rem;
-  font-size: 3rem;
-}
-
-.notFound__text {  
-  margin-bottom: 1.5rem;
-  font-size: 2rem;
-}
-
-.notFound__subtitle {  
-  margin-bottom: 2.5rem;
-  font-size: 1.5rem;
+  color: var(--white);
+  background-color: var(--accent);
 }
 
 .notFound__img {
-  width: 11.875rem;
-  height: 11.9375rem;
-  position: relative;
-  margin-bottom: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 1rem;
+}
+
+.notFound__number {
+  font-size: 200px;
+  font-weight: 600;
+  line-height: 130%;
 }
 
 .notFound__img img {
   object-fit: cover;
 }
 
+.notFound__title { 
+  margin-bottom: 7.5rem;
+  font-weight: 600;
+  font-size: 3.5rem;
+  text-align: center;
+}
+
 .notFound__btn {  
-  padding: 1rem 2rem;  
+  padding: 1rem 2rem;
+  font-weight: 600; 
   font-size: 3rem;
   color: var(--white) !important;
   text-transform: uppercase;
@@ -48,6 +48,45 @@
 
 .notFound__btn:hover {  
   background-color: var(--footer-color);
+}
+
+.notFound__angel_1,
+.notFound__angel_2,
+.notFound__angel_3,
+.notFound__angel_4,
+.notFound__angel_5,
+.notFound__angel_6 {
+  position: absolute;
+  top: 0;
+  left: 15px;
+}
+
+.notFound__angel_2 {
+  left: auto;
+  right: 15px;
+}
+
+.notFound__angel_3 {
+  top: 50%;
+  left: 10%;
+}
+
+.notFound__angel_4 {
+  top: 60%;
+  left: auto;
+  right: 15px;
+}
+
+.notFound__angel_5 {
+  top: auto;
+  bottom: 15px;
+}
+
+.notFound__angel_6 {
+  top: auto;
+  left: auto;
+  bottom: 10px;
+  right: 10px;
 }
 
 @media (min-width: 90rem) and (max-width: 119.9994rem) {
@@ -71,14 +110,6 @@
   .notFound__title { 
     font-size: 1.25rem;
     margin-bottom: 1.25rem;
-  }
-  .notFound__text {  
-    font-size: 1.125rem;
-    margin-bottom: 0.625rem;
-  }  
-  .notFound__subtitle {  
-    font-size: 1rem;
-    margin-bottom: 1.5rem;
   }
   .notFound__btn {
     font-size: 1.5rem;
