--- a/components/product-card/product-card.module.css
+++ b/components/product-card/product-card.module.css
@@ -1,31 +1,33 @@
 .product {
-  width: 248px;
-  height: 424px;
-  padding: 16px 24px 32px;
-  border-radius: 45px;
-  border: 1px solid #000;
-  background: var(--white);
+  width: 15.5rem;
+  height: 26.5rem;
+  padding: 1rem 1.5rem 2rem;
+  border-radius: 2.8125rem;
+  border: 0.0625rem solid var(--black);
+  background-color: var(--white);
+  color: var(--black);
 }
 
 .product__img {
   display: block;
-  width: 168px;
-  height: 191px;
-  margin: 0 auto 10px;
+  width: 10.5rem;
+  height: 11.9375rem;
+  margin: 0 auto 0.625rem;
 }
 
 .product__title {  
-  font-size: 18px;
+  font-size: 1.125rem;
   font-weight: 600;
   text-transform: capitalize;
   text-align: center;
-  margin-bottom: 6px;
+  margin-bottom: 0.375rem;
 }
 
 .product__count {  
-  font-size: 14px;
+  font-size: 0.875rem;
   font-weight: 400;
-  margin-bottom: 7px;
+  color: var(--black);
+  margin-bottom: 0.4375rem;
 }
 
 .product__favorite {
@@ -34,6 +36,7 @@
   align-items: center;
   justify-content: space-between;
   margin-bottom: 0.8125rem;
+  color: var(--black);
 }
 
 .product__rating,
@@ -56,7 +59,7 @@
   font-size: 1.25rem;
   font-style: normal;
   font-weight: 500;
-  margin-bottom: 7px;
+  margin-bottom: 0.4375rem;
 }
 
 .product__footer {
